Migrate to SpringDoc from SpringFox for Openapi